# Lumtact

./: .gitignore  Cargo.toml  NOTICE  README.md  rename.sh
api-server/: Cargo.toml
api-server/src/: main.rs
dag-generator/: Cargo.toml
dag-generator/src/: bin.rs  main.rs  parser.rs
docs/: archive.md  constraints.md  dag-manifest.json  derivation.md
docs/engineering-guide/: temp-debris.md
docs/engineering-guide/interaction/: timing-constraints.md
docs/engineering-guide/layout/: sizing.md
docs/engineering-guide/tokens/: color-gene.md
docs/implementation/components/: button-usage.md
docs/whitepaper/: index.md
web-viewer/: README.md  next.config.mjs  package.json
web-viewer/.storybook/: main.ts  preview.ts
web-viewer/app/: page.tsx
web-viewer/app/api/read/: route.ts
web-viewer/public/: dag-manifest.json
web-viewer/public/docs/: archive.md  philosophy.md  system-summary.md
web-viewer/public/docs/engineering-guide/layout/: typography-grid.md
web-viewer/public/docs/engineering-guide/logic/: state-management.md
web-viewer/public/docs/engineering-guide/tokens/: color-gene.md
web-viewer/public/docs/implementation/components/: button-usage.md
web-viewer/src/app/api/dag/: route.ts
web-viewer/src/components/LumtractButton/: LumtractButton.stories.tsx  LumtractButton.tsx
web-viewer/src/types/: dag.ts
