[package]
name = "lumtract-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.7"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# HTTP 服务支持 (CORS, 静态文件等)
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
# 路由
tower = "0.4"
urlencoding = "2.1.3"
